<resources>
    <string name="app_name">AV Notifier</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_sms_general_title">General</string>
    <string name="pref_sms_notification_title">Notifications</string>
    <string name="pref_sms_datausage_title">Data Usage</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_enable_checking">Enable checking</string>
    <string name="pref_description_enable_checking">Check for new releases from your favourite
        actresses
    </string>

    <string name="pref_title_check_time">Check delay</string>
    <string name="pref_description_check_time">Time delay for checking</string>

    <string name="pref_title_enable_notifications">Enable notifications</string>
    <string name="pref_description_enable_notifications">Sends a notification when there are new
        releases
    </string>

    <string name="pref_title_only_in_wifi">Enable checking in Wi-Fi only</string>
    <string name="pref_description_only_in_wifi">Activate to save mobile data
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
